# network-chess-game

./: .clang-format  .gitignore  AUTHORS.md  INSTALL.md  README.md
doc/: design_notes.md
doc/frontend/: conf.py  index.rst
doc/frontend/modules/: controllers.rst  models.rst  network.rst  utils.rst  views.rst
src/backend/: CMakeLists.txt
src/backend/cmake/: SetupANTLR.cmake  SetupChessLibrary.cmake
src/backend/exe/: CMakeLists.txt  main.cpp
src/backend/exe/controllers/: GameController.cpp  GameController.hpp  GameManager.cpp  MessageRouter.cpp  MessageRouter.hpp
src/backend/exe/models/: ChessGame.cpp  ChessGame.hpp  GameContext.cpp  GameContext.hpp  GameState.cpp  GameState.hpp  IGameState.hpp
src/backend/exe/models/game/: ChessGame.cpp  ChessGame.hpp  GameContext.cpp  GameContext.hpp  GameState.cpp  GameState.hpp  IGameState.hpp  StrikeData.hpp
src/backend/exe/models/game/state/: GameContext.cpp  GameContext.hpp  GameState.cpp  GameState.hpp  GameStatus.hpp  IGameState.hpp
src/backend/exe/models/parser/: GameParser.hpp  GameVisitor.cpp  GameVisitor.hpp  MoveParser.cpp  MoveParser.hpp  ParserFactory.cpp  ParserFactory.hpp  SimpleChessGame.g4
src/backend/exe/models/parser/PGN/: PGNFormatParser.cpp  PGNVisitor.cpp
src/backend/exe/models/parser/SimpleNotation/: MoveParser.cpp  MoveParser.hpp  SimpleNotationParser.hpp
src/backend/exe/network/: NetworkMode.hpp  Server.cpp  Server.hpp
src/backend/exe/network/session/: Session.cpp  Session.hpp
src/backend/exe/network/transport/: ITransport.hpp  TransportFactory.cpp  TransportFactory.hpp
src/backend/exe/network/transport/ipc/: IpcTransport.cpp  IpcTransport.hpp
src/backend/exe/network/transport/posix/: PosixTcpTransport.hpp
src/backend/exe/network/transport/tcp/: TcpTransport.cpp  TcpTransport.hpp
src/backend/exe/parser/: GameVisitor.cpp
src/backend/exe/utils/: Logger.cpp  Logger.hpp
src/backend/parser/: CMakeLists.txt
src/backend/parser/PGN/: PGN.g4  PGNFormatParser.hpp  PGNVisitor.hpp
src/backend/parser/SimpleNotation/: GameVisitor.cpp  SimpleNotationParser.cpp
src/backend/test/: CMakeLists.txt
src/backend/test/models/parser/PGN/: PGNFormatParserTest.cpp
src/backend/test/models/parser/SimpleNotation/: MoveParserTest.cpp
src/frontend/: .pylintrc  chess_client.py  main.py  pyproject.toml  requirements.txt  response.json
src/frontend/controllers/: game_controller.py  message_router.py  response_router.py
src/frontend/models/: client_context.py  client_game_state.py  game_model.py
src/frontend/network/: client.py  network_mode.py
src/frontend/network/session/: client_session.py
src/frontend/network/transport/: ipc_transport.py  tcp_transport.py  transport_factory.py  transport_interface.py
src/frontend/network/transport/ipc/: ipc_transport.py
src/frontend/network/transport/tcp/: tcp_transport.py
src/frontend/test/network/: test_tcp_transport.py
src/frontend/utils/: logger.py  timer.py
src/frontend/views/: console_view.py  gui_view.py  menu_view.py  no_gui_console_view.py  shared_console_view.py  view_factory.py  view_interface.py
test/game/: game_01  game_01b  game_02  game_03  game_03b
